--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <link href="lib/venobox/venobox.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
-    <title>React App</title>
+    <title>Aces Pvgcoet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
