Changes Sponsors and Added Linkedin / Instagram links

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <link href="lib/venobox/venobox.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
-    <title>Aces Pvgcoet</title>
+    <title>ACES PVG's COET</title>
   </head>
 
   <body>
